# esp32-s3-ili9341-lvgl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/dernasherbrezon__sx127x/: .component_hash
components/dernasherbrezon__sx127x/src/: sx127x.c
components/df-player/: CMakeLists.txt  df-player.cpp
components/df-player/include/: df-player.hpp
dernasherbrezon__sx127x/examples/deep_sleep/main/: CMakeLists.txt  main.c
dernasherbrezon__sx127x/examples/deep_sleep2/: platformio.ini
dernasherbrezon__sx127x/examples/deep_sleep2/src/: main.cpp
main/: CMakeLists.txt  Kconfig.projbuild  gui.cpp  gui.hpp  http-server.cpp  http-server.hpp  idf_component.yml  lvgl-touch-xpt2046.cpp  lvgl-touch-xpt2046.hpp  main.cpp  mqtt-client.cpp  mqtt-client.hpp  weather-client.cpp  wifi.cpp  wifi.hpp
main/gui/: back-button-controller.cpp  back-button-controller.hpp  clock-controller.cpp  clock-controller.hpp  energy-controller.cpp  energy-controller.hpp  energy-meter-controller.cpp  energy-meter-controller.hpp  home-controller.cpp  home-controller.hpp  weather-controller.cpp  weather-controller.hpp  weather-hour-controller.cpp  weather-hour-controller.hpp  wifi-controller.cpp  wifi-controller.hpp
main/lvgl-mvc/: events.hpp  lvgl-mvc.hpp  navigation.hpp  view-controller.cpp  view-controller.hpp
main/model/: energy-model.hpp  temperature-model.hpp  weather-model.hpp  wifi-model.cpp  wifi-model.hpp
main/src/: http-server.cpp  lvgl-touch-xpt2046.hpp  main.cpp  mqtt-client.cpp  mqtt-client.hpp  spiffs.cpp  spiffs.hpp  temperature-sensor.cpp  temperature-sensor.hpp  weather-client.cpp  weather-client.hpp  wifi.cpp  wifi.hpp
spiffs_source/: index.html
